--- a/ProyectoWebEncuestas/Views/Admin/Index.cshtml
+++ b/ProyectoWebEncuestas/Views/Admin/Index.cshtml
@@ -87,7 +87,7 @@
                 return;
             }
 
-            encuestas.slice(0, 10).forEach(e => {
+            encuestas.forEach(e => {
                 const div = document.createElement("div");
                 div.className = "tarjeta-encuesta";
                 div.innerHTML = `
